# serverpp

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeListsConan.txt  CONTRIBUTING.md  Dockerfile  Doxyfile.in  LICENSE  README.md  conanfile.py
.ci/: fetch_system_dependencies.sh
.github/workflows/: build-system.yml  cmake.yml  release.yml
.travis/: fetch_conan_dependencies.sh  fetch_system_dependencies.sh
cmake/: serverpp-config.cmake.in
example/echo/: CMakeLists.txt  README.md  conanfile.txt
example/echo/src/: echo_server.cpp
include/serverpp/: core.hpp  tcp_server.hpp  tcp_socket.hpp  version.hpp.in
scripts/: next_release.py
src/: tcp_server.cpp  tcp_socket.cpp
test/: dummy.cpp
test_package/: conanfile.py  example.cpp
